tests/compile_tests/output_struct_with_exceeding_fields.stderr
error[E0609]: no field `absent` on type `Input`
 --> $DIR/output_struct_with_exceeding_fields.rs:6:9
  |
6 |     pub absent: Option<i8>,
  |         ^^^^^^ unknown field
  |
  = note: available fields are: `field_2`, `field_1`
